--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -1,3 +1,4 @@
+<% var comment = ''; %>
 <div class="container-fluid">
     <!---------- HEADER ---------->
     <header class="row">
@@ -14,7 +15,7 @@
 
         <nav class="col-sm-3 col-md-2">
             <div class="img-perfil">
-                <img src="img/perfil.jpg">
+             <!--   <img src="img/perfil.jpg"> -->
             </div>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
@@ -92,7 +93,7 @@
                     <% for( let i = 0; i < module1.length; i++ ) { %>
                         <div class="form-group">
                             <!-- He cambiado la antigua ruta /mail/send , hay que dasle una vuelta -->
-                            <form action="/panel" method="post">
+                            <form action="/save" method="post">
                                 <tr>
                                     <th scope="row"><%= module1[i].name %></th>
 
@@ -106,8 +107,15 @@
                                         </div>
                                     </td>
 
+                                    <% for( let k = 0; k < exercisesUser.length; k++ ) { %>
+                                    <% if( module1[i]._id.equals( exercisesUser[k].idExercise ) ) { %>
+                                    <% comment = exercisesUser[k].comment  %>
+                                    <% break; %>
+                                    <% } %>
+                                    <% }%>
+
                                     <td>
-                                        <textarea class="textarea" cols="30" rows="4" name="comment">asdasdasd</textarea>
+                                        <textarea class="textarea" cols="30" rows="4" name="comment"><%= comment %></textarea>
                                     </td>
                                     <td>
                                         <button type="submit" class="btn btn-primary waves-effect" name="idexercise" value="<%= module1[i]._id %>">Guardar Cambios</button>
