--- a/irontracking/views/dashboard.ejs
+++ b/irontracking/views/dashboard.ejs
@@ -1,7 +1,9 @@
 <% var comment = ''; %>
-<% var iterations%>
+<% var iterations = ['off', 'off', 'off', 'off', 'off', 'off', 'off', 'off', 'off', 'off' ] %>
 <div class="container-fluid">
+
     <!---------- HEADER ---------->
+
     <header class="row">
         <div class="col-xs-3 col-sm-4"></div>
         <div class="col-xs-6 col-sm-4">
@@ -16,7 +18,7 @@
 
         <nav class="col-sm-3 col-md-2">
             <div class="img-perfil">
-             <!--   <img src="img/perfil.jpg"> -->
+                <!--   <img src="img/perfil.jpg"> -->
             </div>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
@@ -36,7 +38,7 @@
                     <div class="trofeo1"></div>
                     <div class="progress">
                         <div id="progressBar1" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
+                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
                 <div class="progressBarra">
@@ -44,7 +46,7 @@
                     <div class="trofeo2"></div>
                     <div class="progress">
                         <div id="progressBar2" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
+                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
                 <div class="progressBarra">
@@ -52,13 +54,14 @@
                     <div class="trofeo3"></div>
                     <div class="progress">
                         <div id="progressBar3" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
-                            aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
+                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
                     </div>
                 </div>
             </div>
         </nav>
 
         <!---------- MAIN ---------->
+
         <main class="col-sm-9 col-md-10">
 
             <div class="cabeceraNombre">
@@ -89,183 +92,78 @@
             </div>
 
             <div class="modulo1 pestnavs active">
+
                 <table class="table modulo1table">
+
                     <thead class="bg-secondary text-white">
-                        <tr>
-                            <th scope="col">Ejercicio</th>
-                            <th scope="col">Iteración</th>
-                            <th scope="col">Comentarios</th>
-                            <th scope="col">Guardar</th>
-                        </tr>
+                    <tr>
+                        <th scope="col">Ejercicio</th>
+                        <th scope="col">Iteración</th>
+                        <th scope="col">Comentarios</th>
+                        <th scope="col">Guardar</th>
+                    </tr>
                     </thead>
+
                     <tbody>
 
                     <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Septima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
                     <% for( let i = 0; i < module1.length; i++ ) { %>
-                        <div class="form-group">
-                            <!-- He cambiado la antigua ruta /mail/send , hay que dasle una vuelta -->
-                            <form action="/save" method="post">
-                                <tr>
-                                    <th scope="row"><%= module1[i].name %></th>
 
-                                    <% for( let k = 0; k < exercisesUser.length; k++ ) { %>
+                    <div class="form-group">
+                        <!-- He cambiado la antigua ruta /mail/send , hay que dasle una vuelta -->
+                        <form action="/save" method="post">
+                            <tr>
+                                <th scope="row"><%= module1[i].name %></th>
+
+                                <% for( let k = 0; k < exercisesUser.length; k++ ) { %>
                                     <% if( module1[i]._id.equals( exercisesUser[k].idExercise ) ) { %>
-                                    <% comment = exercisesUser[k].comment  %>
-                                    <% iterations = exercisesUser[k].iterations %>
+                                        <% comment = exercisesUser[k].comment  %>
+                                        <% iterations = exercisesUser[k].iterations %>
                                     <% break; %>
-                                    <% } else { %>
-                                    <% comment = '' %>
-                                    <% iterations = [undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined ] %>
+                                <% } else { %>
+                                        <% comment = '' %>
+                                        <% iterations = ['off', 'off', 'off', 'off', 'off', 'off', 'off', 'off', 'off', 'off' ] %>
                                     <% } %>
-                                    <% }%>
-
-                                    <td>
-                                        <div class="checkbox">
-                                            <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
-                                            <input class="sum" type="checkbox" name="<%= it[j] %>"  <% if( iterations[j] === 'on' ) { %> <%= 'checked'%> <% } %>>
-                                            <%= it[j] %>
-                                            <br>
-                                            <% } %>
-                                        </div>
-                                    </td>
-
-                                    <td>
-                                        <textarea class="textarea" cols="30" rows="4" name="comment"><%= comment %></textarea>
-                                    </td>
-                                    <td>
-                                        <button type="submit" class="btn btn-primary waves-effect" name="idexercise" value="<%= module1[i]._id %>">Guardar Cambios</button>
-                                        <br>
-                                        <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
-                                    </td>
-                                </tr>
-                            </form>
-                        </div>
-                    <% } %>
-
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="modulo2 pestnavs">
-                <table class="table modulo1table">
-                    <thead class="bg-secondary text-white">
-                    <tr>
-                        <th scope="col">Ejercicio</th>
-                        <th scope="col">Iteración</th>
-                        <th scope="col">Comentarios</th>
-                        <th scope="col">Guardar</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Septima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
-                    <% for( let i = 0; i < module2.length; i++ ) { %>
-                    <div class="form-group">
-                        <!-- He cambiado la antigua ruta /mail/send , hay que dasle una vuelta -->
-                        <form action="/save" method="post">
-                            <tr>
-                                <th scope="row"><%= module2[i].name %></th>
-
-                                <% for( let k = 0; k < exercisesUser.length; k++ ) { %>
-                                <% if( module2[i]._id.equals( exercisesUser[k].idExercise ) ) { %>
-                                <% comment = exercisesUser[k].comment  %>
-                                <% iterations = exercisesUser[k].iterations %>
-                                <% break; %>
-                                <% } else { %>
-                                <% comment = '' %>
-                                <% iterations = [undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined ] %>
-                                <% } %>
                                 <% }%>
 
                                 <td>
                                     <div class="checkbox">
-                                        <% for( let j = 0; j < module2[i].iterations; j++ ) { %>
+
+                                        <% for( let j = 0; j < module1[i].iterations; j++ ) { %>
+
                                         <input class="sum" type="checkbox" name="<%= it[j] %>"  <% if( iterations[j] === 'on' ) { %> <%= 'checked'%> <% } %>>
                                         <%= it[j] %>
                                         <br>
+
                                         <% } %>
+
                                     </div>
                                 </td>
 
                                 <td>
                                     <textarea class="textarea" cols="30" rows="4" name="comment"><%= comment %></textarea>
                                 </td>
+
                                 <td>
-                                    <button type="submit" class="btn btn-primary waves-effect" name="idexercise" value="<%= module2[i]._id %>">Guardar Cambios</button>
+                                    <button type="submit" class="btn btn-primary waves-effect" name="idexercise" value="<%= module1[i]._id %>">Guardar Cambios</button>
                                     <br>
                                     <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
                                 </td>
+
                             </tr>
                         </form>
                     </div>
+
                     <% } %>
 
                     </tbody>
                 </table>
             </div>
-
-            <div class="modulo3 pestnavs">
-                <table class="table modulo1table">
-                    <thead class="bg-secondary text-white">
-                    <tr>
-                        <th scope="col">Ejercicio</th>
-                        <th scope="col">Iteración</th>
-                        <th scope="col">Comentarios</th>
-                        <th scope="col">Guardar</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    <% var it = ['Primera', 'Segunda', 'Tercera', 'Cuarta', 'Quinta', 'Sexta', 'Septima', 'Octava', 'Novena', 'Décima', 'Undécima', 'Duodécima']; %>
-                    <% for( let i = 0; i < module3.length; i++ ) { %>
-                    <div class="form-group">
-                        <!-- He cambiado la antigua ruta /mail/send , hay que dasle una vuelta -->
-                        <form action="/save" method="post">
-                            <tr>
-                                <th scope="row"><%= module3[i].name %></th>
-
-                                <% for( let k = 0; k < exercisesUser.length; k++ ) { %>
-                                <% if( module3[i]._id.equals( exercisesUser[k].idExercise ) ) { %>
-                                <% comment = exercisesUser[k].comment  %>
-                                <% iterations = exercisesUser[k].iterations %>
-                                <% break; %>
-                                <% } else { %>
-                                <% comment = '' %>
-                                <% iterations = [undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined, undefined ] %>
-                                <% } %>
-                                <% }%>
-
-                                <td>
-                                    <div class="checkbox">
-                                        <% for( let j = 0; j < module3[i].iterations; j++ ) { %>
-                                        <input class="sum" type="checkbox" name="<%= it[j] %>"  <% if( iterations[j] === 'on' ) { %> <%= 'checked'%> <% } %>>
-                                        <%= it[j] %>
-                                        <br>
-                                        <% } %>
-                                    </div>
-                                </td>
-
-                                <td>
-                                    <textarea class="textarea" cols="30" rows="4" name="comment"><%= comment %></textarea>
-                                </td>
-                                <td>
-                                    <button type="submit" class="btn btn-primary waves-effect" name="idexercise" value="<%= module3[i]._id %>">Guardar Cambios</button>
-                                    <br>
-                                    <button id="emailLink" class="btn btn-light waves-effect">Enviar Comentario</button>
-                                </td>
-                            </tr>
-                        </form>
-                    </div>
-                    <% } %>
-
-                    </tbody>
-                </table>
-            </div>
-
         </main>
     </div>
 
-    <!-- AYUDA -->
+    <!---------- AYUDA ------------>
+
     <div class='wrap'>
         <div class='content'>
             <h2>Hello Ironhacker!</h2>
