--- a/irontracking/views/admin/index.ejs
+++ b/irontracking/views/admin/index.ejs
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+
     <!---------- HEADER ---------->
     <header class="row">
         <div class="col-xs-3 col-sm-4"></div>
@@ -9,12 +10,11 @@
     </header>
 
     <!---------- NAV ---------->
-
     <div class="row control maincont">
 
         <nav class="col-sm-3 col-md-2">
             <div class="img-perfil">
-                <img src="img/perfil.jpg">
+                <img src="<%= user.photos[0].value %>">
             </div>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
@@ -144,7 +144,7 @@
                         <form method="post" action="/admin/update">
                             <tr>
                                 <th scope="row">
-                                    <input type="text" name="name" placeholder="<%= module1[i].name %>">
+                                    <input type="text" name="name" value="<%= module1[i].name %>">
                                     <input type="hidden" name="idex" value="<%= module1[i]._id %>">
                                 </th>
 
@@ -187,7 +187,6 @@
                     </div>
 
                     <% } %>
-
 
                 </table>
             </div>
