--- a/irontracking/views/stats.ejs
+++ b/irontracking/views/stats.ejs
@@ -9,13 +9,11 @@
     </header>
 
     <!---------- NAV ---------->
-
-
     <div class="row control maincont">
 
         <nav class="col-sm-3 col-md-2">
             <div class="img-perfil">
-                <img src="img/perfil.jpg">
+                <img src="<%= user.photos[0].value %>">
             </div>
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
