--- a/irontracking/views/layouts/main.ejs
+++ b/irontracking/views/layouts/main.ejs
@@ -1,27 +1,100 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-        <title>IronTrack</title>
+    <head>
+        <title>IronTracking</title>
         <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
         <link href="css/main.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <script type="text/javascript" src="js/main.js"></script>
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.1.0/font-awesome-animation.css" /></head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.1.0/font-awesome-animation.css" />
+    </head>
+    <body>
+        <div class="container-fluid">
 
-<body>
+        <!---------- HEADER ---------->
+            <header class="row">
+                <div class="col-xs-3 col-sm-4"></div>
+                <div class="col-xs-6 col-sm-4">
+                    <h1>IronTracking</h1>
+                </div>
+                <div class="col-xs-3 col-sm-4"></div>
+            </header>
+
+<% if( typeof(user) !== 'undefined' ) { %>
+        <!---------- NAV ---------->
+        <div class="row control maincont">
+
+        <nav class="col-sm-3 col-md-2">
+            <div class="img-perfil">
+                <img src="<%= user.photos[0].value %>">
+            </div>
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/dashboard">Tracking
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/stats">Estadísticas</a>
+                </li>
+<% if( user.id === '29918443' ) { %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin">Admin</a>
+                </li>
+<% } %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Salir</a>
+                </li>
+
+            </ul>
+
+            <div class="lechuga-bar">
+                <div class="progressBarra">
+                    <span>Módulo 1</span>
+                    <div class="trofeo1"></div>
+                    <div class="progress">
+                        <div id="progressBar1" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
+                    </div>
+                </div>
+                <div class="progressBarra">
+                    <span>Módulo 2</span>
+                    <div class="trofeo2"></div>
+                    <div class="progress">
+                        <div id="progressBar2" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
+                    </div>
+                </div>
+                <div class="progressBarra">
+                    <span>Módulo 3</span>
+                    <div class="trofeo3"></div>
+                    <div class="progress">
+                        <div id="progressBar3" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+                             aria-valuemin="0" aria-valuemax="100" style="width: 0%"> 0% </div>
+                    </div>
+                </div>
+            </div>
+
+        </nav>
+
+<% } %>
         <%- body -%>
-</body>
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-        crossorigin="anonymous"></script>
-<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
+<% if( typeof(user) !== 'undefined' ) { %>
+        </div>
+<% } %>
+
+        </div>
+    </body>
+
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+            crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
 </html>
